# blackroad-widget-factory

./: .gitignore  AGENTS.md  README.md  pyproject.toml
src/: main_module.py
tests/: test_module.py
